--- a/app/views/people/new.html.erb
+++ b/app/views/people/new.html.erb
@@ -9,26 +9,8 @@
       <%= p.label :email %>
       <%= p.text_field :email %>
     </p>
-
-    <div class="cars">
-      <div>
-        <% @person.cars.each do |c| %>
-          <p><%= c.model %> - <%= c.year %></p>
-        <% end %>
-      </div>
-      <p>
-        <label for="car_model">Model</label>
-        <input id="car_model" type="text" />
-      
-        <label for="car_year">Year</label>
-        <input id="car_year" type="text" />
-        <a class="addCar" href="javascript:void(0);">Add</a>
-      </p>
-    </div>
-    
-    
     <p>
-      <%= p.submit "New user", class: "btn btn-large btn-primary" %>
+        <%= p.submit "Save", class: "btn btn-large btn-primary" %>
     </p>
   <% end %>
 </p>
